# FANNBench

./: .gitignore  LICENSE  README.md
ACORN/: CMakeLists.txt  make_groundtruth.py  run_simple_test.sh  vecs2json.py
ACORN/demos/: CMakeLists.txt  acorn_build.cpp  acorn_query.cpp  acorn_query_arbi.cpp  acorn_query_keyword.cpp  test_acorn.cpp  utils.cpp
ACORN/faiss/: Index.h  IndexACORN.cpp  IndexACORN.h
DiskANN/: CMakeLists.txt
DiskANN/apps/: build_stitched_index.cpp  search_memory_index.cpp
DiskANN/build_backup/: CMakeCache.txt  Makefile  cmake_install.cmake
DynamicSegmentGraph/: CMakeLists.txt
DynamicSegmentGraph/benchmark/: CMakeLists.txt  build_index.cc  query_index.cc
DynamicSegmentGraph/src/: compact_graph.h
FANNBench/: README.md  all_construct.sh  all_keyword_construct.sh  all_keyword_query.sh  all_query.sh  all_query2.sh  all_range_construct.sh  all_range_query.sh  bench_generator.sh  check_index.sh  clear.sh  commands.sh  deepdist.txt  download_youtube_attr.txt  exp_results.csv  file_check.sh  latexplot.dvi  mocheng.code-workspace  multi_constrsuction.sh  plot.sh  run_RangeFilteredANN.sh  run_acorn.sh  run_acorn_kg.sh  run_acorn_rng.sh  run_airship.sh  run_all.sh  run_attr_generator.sh  run_biased_label_query_generator.sh  run_clear.sh  run_diskann.sh  run_diskann_stitched.sh  run_dsg.sh  run_dsg2.sh  run_dsg_left.sh  run_dsg_onethread.sh  run_dsg_right.sh  run_groundtruth_generator.sh  run_hnsw.sh  run_hnsw_2hop.sh  run_hnsw_kg.sh  (+33 more)
FANNBench/09-03-2024_sift1M_diskann/: summary_diskann_sift1M.txt
FANNBench/09-11-2024_siftsmall_rii/: summary_rii_.txt
FANNBench/09-11-2024_siftsmall_serf/: summary_serf_siftsmall.txt
FANNBench/09-13-2024_siftsmall_RangeFilteredANN/: summary_RangeFilteredANN_.txt
FANNBench/09-18-2024_siftsmall_milvus/: summary_milvus_siftsmall.txt
FANNBench/09-19-2024_siftsmall_iRangeGraph/: summary_iRangeGraph_.txt
FANNBench/09-22-2024_siftsmall_acorn/: summary_acorn_.txt  summary_acorn_siftsmall.txt
FANNBench/09-24-2024_sift_acorn/: summary_acorn_sift.txt
FANNBench/09-25-2024_sift_iRangeGraph/: summary_iRangeGraph_sift.txt
FANNBench/09-25-2024_sift_milvus/: summary_milvus_sift.txt
FANNBench/09-26-2024_sift_rii/: summary_rii_.txt
FANNBench/09-26-2024_siftsmall_RangeFilteredANN/: summary_RangeFilteredANN_.txt
FANNBench/09-27-2024_sift_groundtruth/: summary_groundtruth_sift.txt
FANNBench/09-27-2024_sift_serf/: summary_serf_sift.txt
FANNBench/09-28-2024_sift_RangeFilteredANN/: summary_RangeFilteredANN_.txt
NHQ-main/: README.md  build.sh
RangeFilteredANN/: Makefile  cmake_install.cmake  setup.py
SeRF/: CMakeLists.txt
UNIFY/: README.md
faiss/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  run_generate_groundtruth.sh
faiss/benchs/: Makefile  (+1 more)
faiss/demos/: CMakeLists.txt  Makefile  airship_build.cpp  airship_query.cpp  cmake_install.cmake  generate_groundtruth.cpp  generate_groundtruth_arbi.cpp  generate_groundtruth_keyword.cpp  hnsw_build.cpp  hnsw_query.cpp  hnsw_query_arbi.cpp  hnsw_query_keyword.cpp  ivfpq_build.cpp  ivfpq_query.cpp  ivfpq_query_arbi.cpp  ivfpq_query_keyword.cpp  test_json.cpp  utils.cpp
(+11545 files in other folders)
